gcc/testsuite/rust/rustc/ui/feature-gates/feature-gate-deprecated_safe_dg.rs
#[deprecated_safe(since = "TBD", note = "...")] // { dg-error ".E0658." "" { target *-*-* } }
unsafe fn deprecated_safe_fn() {}

#[deprecated_safe(since = "TBD", note = "...")] // { dg-error ".E0658." "" { target *-*-* } }
unsafe trait DeprecatedSafeTrait {}

fn main() {}

